# hexapod

./: CMakeLists.txt  README.md  package.xml
src/: iKine.cpp  iKine.h  main_node.cpp  serial_node.cpp
